cmake_minimum_required(VERSION 3.18.1)
project(boost_log CXX)

#set(SRC_FILES src/shared_ptr_test.cpp)
# set(SRC_FILES test_leveldb/main.cpp)
#set(SRC_FILES test_leveldb/from_github.cpp)
#set(SRC_FILES event_system_test/eventSys.cpp) #EVENTSYSTEM
# set(SRC_FILES event_system_test/event_sys2.cpp)
# set(SRC_FILES event_system_test/template_test.h event_system_test/template_test.cpp)
#set(SRC_FILES src/share_test.cpp)
#set(SRC_FILES src/test_tuples.cpp)
#set(SRC_FILES src/univalue_obj_test.cpp)
#set(SRC_FILES src/template_2arg_test.cpp)
#set(SRC_FILES src/uint_double.cpp)
#set(SRC_FILES src/univalue_char_array.cpp)
#set(SRC_FILES src/inheretance_univalue_test.cpp)
#set(SRC_FILES src/accuracy_tests.cpp)
set(SRC_FILES src/fiber_coroutine/fiber_test3.cpp)
set(Boost_USE_STATIC_LIBS ON)
add_executable(boost_log ${SRC_FILES})

find_package(Boost 1.74.0 COMPONENTS fiber log log_setup filesystem REQUIRED)
target_link_libraries(boost_log ${Boost_LIBRARIES} Boost::fiber Threads::Threads  Boost::log_setup Boost::log Boost::filesystem)


# include_directories(bna)
#include_directories(dbshell)
include_directories(pylib)
include_directories(btclibs)
include_directories(networks)
add_subdirectory(pylib)
add_subdirectory(univalue)
add_subdirectory(btclibs)
add_subdirectory(leveldb)
add_subdirectory(networks)
#add_subdirectory(dbshell)
# add_subdirectory(bna)

target_link_libraries(boost_log univalue btclibs leveldb networks pylib)#dbshell)#bna)